[package]
name = "compile-time"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "Macros for getting compile time information."
documentation = "https://docs.rs/compile-time"
repository = "https://github.com/reitermarkus/compile-time-rs"
homepage = "https://github.com/reitermarkus/compile-time-rs"
keywords = ["compilation"]
categories = ["proc-macro"]

[lib]
proc-macro = true

[dependencies]
once_cell = "1"
proc-macro2 = "1.0"
quote = "1.0"
rustc_version = "0.4"
semver = "1"
time = { version = "0.3.17", features = ["macros", "formatting"] }
