[workspace]
members = ["macros"]

[workspace.package]
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
repository = "https://github.com/reitermarkus/compile-time-rs"
homepage = "https://github.com/reitermarkus/compile-time-rs"
keywords = ["compilation", "proc-macro"]
categories = ["development-tools", "date-and-time", "no-std"]

[workspace.dependencies]
semver = { version = "1", default-features = false }
time03 = { package = "time", version = "0.3.48", default-features = false }

[package]
name = "compile-time"
description = "Constants and macros for getting compile time information."
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation = "https://docs.rs/compile-time"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]
feature-matrix = [
  ["default"],
  ["command"],
  ["time"],
  ["version"],
]

[features]
default = ["time", "version", "command"]
time = ["dep:time03", "compile-time-macros/time"]
version = ["dep:semver", "compile-time-macros/version"]
command = ["compile-time-macros/command"]

[dependencies]
compile-time-macros = { version = "=0.3.5", path = "./macros" }
semver = { workspace = true, optional = true }
time03 = { workspace = true, features = ["formatting"], optional = true }
