[package]
name = "compile-time-macros"
description = "Macros for getting compile time information."
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation = "https://docs.rs/compile-time-macros"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
default = ["time", "version", "command"]
time = ["dep:time03", "dep:once_cell"]
version = ["dep:rustc_version", "dep:semver", "dep:once_cell"]
command = ["dep:macro-string"]

[dependencies]
once_cell = { version = "1", optional = true }
proc-macro2 = "1.0"
syn = "3"
quote = "1.0"
rustc_version = { version = "0.4", optional = true }
time03 = { workspace = true, features = ["formatting", "local-offset"], optional = true }
semver = { workspace = true, optional = true }
macro-string = { version = "0.3", optional = true }

[dev-dependencies]
compile-time = { path = ".." }
